--- a/app/globals.css
+++ b/app/globals.css
@@ -4,20 +4,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
+/* Default Light Theme */
 :root {
   --primary: #131182;
-  /* --foreground: #171717; */
+  --background: #ffffff;
+  --foreground: #171717;
 }
-/* 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
+
+/* Dark Theme */
+[data-theme='dark'] {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
 
 body {
-  /* color: var(--foreground); */
-  /* background: var(--background); */
-  font-family: Manrope;
+  font-family: 'Manrope', sans-serif;
+  background-color: var(--background);
+  color: var(--foreground);
 }
