--- a/app/globals.css
+++ b/app/globals.css
@@ -7,18 +7,18 @@
 /* Default Light Theme */
 :root {
   --primary: #131182;
-  --background: #ffffff;
-  --foreground: #171717;
+  /* --background: #ffffff; */
+  /* --foreground: #171717; */
 }
 
-/* Dark Theme */
+/* Dark Theme
 [data-theme='dark'] {
   --background: #0a0a0a;
   --foreground: #ededed;
-}
+} */
 
 body {
   font-family: 'Manrope', sans-serif;
-  background-color: var(--background);
-  color: var(--foreground);
+  /* background-color: var(--background); */
+  /* color: var(--foreground); */
 }
