--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,23 @@ body {
   /* background-color: var(--background); */
   /* color: var(--foreground); */
 }
+
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(39, 41, 58);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border-radius: 8px;
+  border: 3px solid gray;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: gray;
+}
